fix(map.component): add new scrollbar for sidebar

--- a/app/common/header/header.css
+++ b/app/common/header/header.css
@@ -129,7 +129,5 @@
     display: none;
   }
 
-  .header-content main-menu {
-    display: none;
-  }
+
 }
