--- a/app/common/things-filter/things-filter-mobile.css
+++ b/app/common/things-filter/things-filter-mobile.css
@@ -1,4 +1,3 @@
-
 .close-button {
   position: absolute;
   top: 18px;
@@ -72,7 +71,7 @@
   text-align: left;
   padding: 16px 35px 20px 20px;
   color: #374551;
-  height:55px;
+  height: 55px;
   font-size: 24px;
   line-height: 20px;
   border-bottom: 1px solid #c6c7c9;
@@ -149,7 +148,7 @@
 }
 
 #things-filter .search-container[hidden] + .tabs-header-container + .tabs-content-container {
-  height: calc(100% - 96px);
+  height: calc(100% - 106px);
   overflow-y: auto;
 }
 
@@ -161,10 +160,7 @@
 }
 
 #things-filter .thing-content:last-child {
-  padding: 2px 18px 12px 24px;
-  position: relative;
   border-bottom: 0;
-  width: 100%;
 }
 
 #things-filter .thing-content.empty {
@@ -316,7 +312,7 @@
   font-family: 'Bariol Regular', sans-serif;
 }
 
-@media (max-width: 767px) {
+@media (max-width: 599px) {
 
   .close-button {
     position: absolute;
@@ -332,30 +328,16 @@
   }
 
   #things-filter .tabs-header-container span {
-    color: #767d86;
     font-size: 24px;
-    font-weight: 400;
-    line-height: 30px;
-    display: inline-block;
     padding: 10px 14px;
-    position: relative;
   }
 
   #things-filter .thing-filter-header .thing-filter-header-content {
-    min-width: 150px;
-    text-align: left;
     padding: 18px 35px 14px 8px;
-    color: #374551;
-    font-size: 24px;
-    height:55px;
-    line-height: 20px;
-    border-bottom: 1px solid #c6c7c9;
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
   }
-
-
 
   #things-filter .things-filter-button {
     position: relative;
@@ -363,17 +345,8 @@
   }
 
   #things-filter .things-filter-button .things-filter-button-content {
-    background-color: white;
-    border: 1px solid #e4e6e7;
-    border-radius: 6px;
     text-align: left;
     padding: 7px 29px 6px 12px;
-    color: #374551;
-    font-size: 24px;
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    line-height: 20px;
   }
 
   #things-filter .things-filter-button .things-filter-button-content img {
@@ -386,43 +359,23 @@
   #things-filter .things-filter-button span {
   }
 
+  #things-filter .things-filter-button .things-filter-button-content span.arrow {
+     display: none;
+   }
+
 
   #things-filter.open-things-filter .things-filter-button .things-filter-button-content span.arrow {
     display: none;
   }
 
-  #things-filter .thing-filter-header {
-    width: 100%;
-    height: 55px;
-    background-color: #f6f7f8;
-  }
-
   #things-filter .tabs-content-container {
-    position: relative;
-    height: calc(100% - 150px);
-    overflow-y: auto;
+    height: calc(100% - 160px);
   }
 
   #things-filter .thing-content {
-    padding: 0px 18px 4px 12px;
-    position: relative;
-    border-bottom: 1px solid #e4e6e7;
-    width: 100%;
+    padding: 0 18px 4px 12px;
   }
 
-  #things-filter .thing-content:last-child {
-    padding: 2px 18px 12px 12px;
-    position: relative;
-    border-bottom: 1px solid #e4e6e7;;
-    width: 100%;
-  }
-
-  #things-filter .thing-content.empty {
-  }
-
-  #things-filter .thing-content:hover {
-    background-color: #f4f5f5;
-  }
 
   #things-filter .thing-content .thing-apply-icon {
     position: absolute;
@@ -432,122 +385,9 @@
     height: 20px;
   }
 
-  #things-filter .thing-content .thing-apply-icon:last-child {
-    position: absolute;
-    top: calc(50% - 11px);
-    right: 8px;
-    width: 20px;
-    height: 20px;
-  }
-
-  #things-filter .thing-content .thing-apply-icon img {
-    position: relative;
-    top: 0;
-    width: 20px;
-    height: 20px;
-  }
-
-  #things-filter .thing-content img {
-    position: relative;
-    top: 0;
-    width: 24px;
-    height: 24px;
-  }
-
   #things-filter .things-search {
     position: relative;
     margin: 15px 8px 5px;
-  }
-
-  #things-filter .things-search input {
-    font-size: 18px;
-    color: #767d86;
-    padding: 3px 35px 3px 20px;
-    background-color: white;
-    border: 1px solid #9c9fa4;
-    border-radius: 16px;
-    text-align: left;
-    width: 100%;
-  }
-
-  #things-filter .things-search img {
-    position: absolute;
-    top: 8px;
-    right: 14px;
-    width: 18px;
-  }
-
-  #things-filter.open-things-filter .things-filter-container {
-    display: block;
-  }
-
-  .things-filter-button .thing-pop-up {
-    position: absolute;
-    top: 100%;
-    left: -7px;
-    z-index: 999;
-    padding-top: 3px;
-    display: none;
-    text-align: left;
-  }
-
-  .things-filter-button:hover .thing-pop-up {
-    display: block;
-  }
-
-  .things-filter-button.exist:hover .thing-pop-up {
-    display: block;
-  }
-
-  .things-filter-button .thing-pop-up span {
-    width: 50px;
-    height: 10px;
-    position: relative;
-    overflow: hidden;
-    display: block;
-  }
-
-  .things-filter-button .thing-pop-up span:after {
-    content: "";
-    position: absolute;
-    width: 13px;
-    height: 13px;
-    background: white;
-    -webkit-transform: rotate(45deg);
-    -moz-transform: rotate(45deg);
-    -ms-transform: rotate(45deg);
-    -o-transform: rotate(45deg);
-    transform: rotate(45deg);
-    top: 5px;
-    left: 0;
-    right: 0;
-    box-shadow: -1px -1px 10px -2px rgba(0, 0, 0, 0.5);
-    margin: auto;
-  }
-
-  .things-filter-button .thing-pop-up-content {
-    width: 450px;
-    background-color: white;
-    border-radius: 4px;
-    padding: 20px 15px;
-    box-shadow: 0px 2px 12.04px 1.96px rgba(0, 0, 0, 0.28);
-  }
-
-  .things-filter-button .thing-pop-up-content p {
-    font-family: 'Bariol Light', sans-serif;
-    font-size: 14px;
-    line-height: 20px;
-    color: #5f6a74;
-    margin-bottom: 0;
-  }
-
-  #countries-filter .countries-search input:focus {
-    box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px rgba(0, 0, 0, .12);
-  }
-
-  .things-filter-button .thing-pop-up-content p a {
-    color: #0567bf;
-    font-family: 'Bariol Regular', sans-serif;
   }
 
 }
