--- a/app/map/map.css
+++ b/app/map/map.css
@@ -1,3 +1,11 @@
+.close-button {
+  width: 8px;
+  height: 8px;
+  position: absolute;
+  top: 6px;
+  right: 6px;
+}
+
 .map-header {
   background-color: #fff;
   border-bottom: 1px solid #ffce00;
@@ -471,29 +479,67 @@
 
 .left-side-info ::-webkit-scrollbar {
   width: 6px;
-}
-
-.left-side-info ::-webkit-scrollbar-track {
-  border-radius: 10px;
-  background-color: #303e4a;
+  margin: 0;
 }
 
 .left-side-info ::-webkit-scrollbar-thumb {
-  border-radius: 10px;
-  background-color: #1e2c37;
+  border-radius: 4px;
+  background-color: #ced1d5;;
 }
 
 @media (max-width: 1023px) {
+  .container {
+    padding: 0 10px;
+  }
+
+  #places .places_header {
+    padding-top: 0;
+    padding-bottom: 20px;
+  }
+
+  #places .mapBox {
+    padding: 0 !important;
+  }
+
+  #places .mapBox .mapBoxContainer {
+    max-height: 445px;
+    max-width: 748px;
+  }
+
   .countries-list {
+    margin-bottom: 50px;
+    font-size: 18px;
+    color: #374551;
     -moz-column-count: 4;
     -moz-columns: 4;
     -webkit-columns: 4;
     columns: 4;
   }
 
-  .map-header .container {
-    padding: 0 0 0 10px;
+  .countries-list .country {
+    display: block;
+    margin-left: 14px;
   }
+
+  .left-side-info {
+    position: fixed;
+    height: calc(100% - 56px);
+    width: 324px;
+    background-color: white;
+    z-index: 9999;
+    top: 58px;
+  }
+
+  .left-side-info .header {
+    background-color: #f6f7f8;
+    position: relative;
+  }
+
+  .left-side-info .info-box-container {
+    padding: 0 20px;
+    height: calc(100% - 54px);
+  }
+
 }
 
 @media (max-width: 991px) {
@@ -504,59 +550,24 @@
   }
 }
 
-@media (max-width: 600px) {
-  #places .familyPortraits .portrait {
-    width: calc(50% - 15px);
-    padding-top: calc(50% - 15px);
-    margin: 7.5px;
-  }
+@media (max-width: 599px) {
 
-  #places .familyPortraits .portrait .description .name {
-    font-size: 15px;
-  }
-
-  .left-side-info {
-    height: calc(100% - 44px);
-    bottom: 0;
-    width: 80%;
-    top: 44px;
-  }
-
-  .left-side-info .info-box .name {
-    font-size: 20px;
-    display: inline-block;
-    margin-top: 6px;
-  }
-
-  .left-side-info .header p {
-    font-size: 16px;
-    line-height: 42px;
-  }
-}
-
-@media (max-width: 480px) {
-  #places {
-    padding-top: 42px;
-  }
-
-  #places .familyPortraits .portrait {
-    width: calc(50% - 15px);
-    padding-top: calc(50% - 15px);
-    margin: 7.5px;
-    min-height: 230px;
+  .container {
+    padding: 0 15px;
   }
 
   #places .places_header {
     padding-top: 20px;
+    padding-bottom: 20px;
   }
 
-  #places .places_header h2 {
-    font-size: 36px;
+  #places .mapBox {
+    padding: 0 !important;
   }
 
-  #places .places_header p {
-    font-size: 18px;
-    line-height: 28px;
+  #places .mapBox .mapBoxContainer {
+    max-height: 223px;
+    max-width: 365px;
   }
 
   .countries-list {
@@ -569,26 +580,26 @@
     columns: 2;
   }
 
-  #places .mapBox {
-    margin-bottom: 0;
-  }
-}
-
-@media (max-width: 385px) {
-  #places .familyPortraits .portrait {
-    min-height: 220px;
+  .countries-list .country {
+    display: block;
+    margin-left: 14px;
   }
 
-  #places .see_more_container .see_more {
-    margin-top: 10px;
-  }
-}
-
-@media (max-width: 320px) {
-  #places .familyPortraits .portrait {
-    min-height: 200px;
+  .left-side-info {
+    height: 100%;
     width: 100%;
-    padding-top: 100%;
-    margin: 0 0 20px;
+    right: 0;
+    top: 0;
+  }
+
+  .left-side-info .header {
+    background-color: #f6f7f8;
+    position: relative;
+  }
+
+  .left-side-info .info-box-container {
+    padding: 0 20px;
+    height: calc(100% - 54px);
   }
 }
+
